--- a/src/_includes/components/nav-menu.njk
+++ b/src/_includes/components/nav-menu.njk
@@ -1,7 +1,8 @@
 <nav class="primary-nav" aria-label="Primary Navigation">
-  {%- for pageItem in collections.publicPages %}
-    {%- if pageItem.menu_order > 0 %}
-    <a {% if page.url === '/' + pageItem.slug + '/' %}aria-current="page" {% endif %}href="/{{ pageItem.slug }}/">{{ pageItem.title }}</a>
+  {% set navItems = collections.pages | eleventyNavigation %}
+  {%- for item in navItems %}
+    {%- if item.order > 0 %}
+    <a {% if page.url === item.url %}aria-current="page" {% endif %}href="{{ item.url }}">{{ item.key }}</a>
     {%- endif %}
   {%- endfor %}
   <a {% if page.url === '/news/' %}aria-current="page" {% endif %}href="/news/">News</a>
