--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -1,24 +1,20 @@
----
-pagination:
-  data: collections.publicPages
-  size: 1
-  alias: pageItem
-permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug  }}/"
----
+{% if previewMode %}
+{% extends 'layouts/preview.njk' %}
+{% else %}
+{% extends 'layouts/base.njk' %}
+{% endif %}
 
-{% extends "layouts/base.njk" %}
-
-{% set pageTitle = pageItem.title %}
-{% set pageExcerpt = pageItem.excerpt %}
+{% set pageTitle = title %}
+{% set pageExcerpt = excerpt %}
 
 {% block content %}
 {% if page.url === "/" %}
 <div>
     <article>
-    <h1 class="title">{{ pageTitle }}</h1>
-    <div class="api-content">
-    {{ pageItem.content | safe }}
-    </div>
+      <h1 class="title">{{ pageTitle }}</h1>
+      <div class="api-content">
+      {{ content | safe }}
+      </div>
     </article>
     <div class="homepage-cards">
       <a href="/views/" class="blue card">
@@ -36,11 +32,11 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug  }}/"
     </div>
 </div>
 
-{% elif pageItem.slug === "initiatives" %}
-<article class="page {{ pageItem.slug }}">
+{% elif page.url === "/initiatives/" %}
+<article class="page initiatives">
   <h1 class="title">{{ pageTitle }}</h1>
   <div class="api-content">
-    {{ pageItem.content | safe }}
+    {{ content | safe }}
     <div class="initiatives">
       {% for initiative in collections.initiatives %}
         {% set tileURL = initiative.url %}
@@ -56,10 +52,10 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug  }}/"
 </article>
 
 {% else %}
-<article class="page {{ pageItem.slug }}">
+<article class="page {{ title | slug }}">
   <h1>{{ pageTitle }}</h1>
   <div class="api-content">
-    {{ pageItem.content | safe }}
+    {{ content | safe }}
   </div>
 </article>
 {% endif %}
@@ -75,10 +71,10 @@ document.querySelectorAll("main article.page h1, main article.page h2, header").
 });
 </script>
 
-{% if pageItem.slug === "advisory-panel" %}
-  <script src="/js/advisory-panel-handler.js"></script>
+{% if page.url === "/advisory-panel/" %}
+  <script src="/js/expander.js"></script>
 {% endif %}
-{% if pageItem.slug === "team" %}
+{% if page.url === "/team/" %}
   <script src="/js/team-handler.js"></script>
 {% endif %}
 {% endblock %}
