--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -91,7 +91,12 @@ figure {
 	margin-right: auto;
 }
 
-// Styling for media and text block with media on the left
+p img {
+	height: auto;
+	max-width: 100%;
+}
+
+// Base styling for media and text block
 .wp-block-media-text {
 	display: grid;
 
@@ -109,6 +114,11 @@ figure {
 	}
 }
 
+// Styling for media and text block with media on the left
+.has-media-on-the-left {
+	grid-template-columns: 15% auto;
+}
+
 // Styling for media and text block with media on the right
 .has-media-on-the-right {
 	.wp-block-media-text__media {
@@ -124,8 +134,7 @@ figure {
 }
 
 // The folowing CSS rule ensures video content is the width of the article element in mobile and iPad views
-.wp-block-video,
-.is-type-video {
+.embed--youtube {
 	min-width: 100%;
 }
 
@@ -214,8 +223,7 @@ figcaption {
 		}
 
 		// WP customized styles for Desktop and iPad Pro views
-		.wp-block-video,
-		.is-type-video {
+		.embed--youtube {
 			min-width: auto;
 		}
 
@@ -232,7 +240,7 @@ figcaption {
 		}
 
 		// Styling for media and text block with media on the left
-		.wp-block-media-text {
+		.has-media-on-the-left {
 			.wp-block-media-text__content {
 				margin-left: rem(25);
 			}
@@ -251,8 +259,7 @@ figcaption {
 			}
 		}
 
-		.is-type-video .wp-block-embed__wrapper iframe,
-		.wp-block-video video {
+		.embed--youtube iframe {
 			height: rem(326);
 			width: rem(580);
 		}
