--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="/css/main.css"/>
     <script src="/js/main.js" defer></script>
     <link rel="preload" href="/lib/infusion/dist/infusion-uio.min.js" as="script">
-    {% block headerScripts %}{% endblock %}
 
     <!-- CSS files for UI Options-->
     <link rel="stylesheet" type="text/css" href="/lib/infusion/dist/assets/src/framework/preferences/css/Enactors.css"/>
@@ -21,6 +20,7 @@
 
     <!-- The Infusion Library for UI Options -->
     <script src="/lib/infusion/dist/infusion-uio.min.js"></script>
+    {% block headerScripts %}{% endblock %}
   </head>
   <body>
     <div id="defaultContainer">
@@ -28,7 +28,7 @@
       <div class="content-wrapper">
         <aside id="toc"></aside>
         <main>
-          <nav class="flc-toc-tocContainer"></nav>
+          <nav class="flc-toc-tocContainer hidden-on-mobile-for-map"></nav>
           {% block content %}{% endblock %}
         </main>
       </div>
