--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -7,6 +7,7 @@
 @import "filter";
 @import "identity";
 @import "initiatives";
+@import "map";
 @import "news-and-views";
 @import "news-grid";
 @import "pagination";
